oxiplate-derive/tests/broken/extends/writ.stderr
error: Writs are not allowed here. Only comments, whitespace, and block statements are allowed.
 --> tests/broken/extends/writ.rs:4:63
  |
4 | #[oxiplate_inline(r#"{% extends "multiple-blocks.html.oxip" %}{{ "hello" }}"#)]
  |                                                               ^^^^^^^^^^^^^
